# galaxy

./: .gitignore  Cargo.toml  Dockerfile  README.md  requirements.txt  run_container.sh
crates/sim-core/: Cargo.toml
crates/sim-core/src/: config.rs  init.rs  lib.rs  math.rs  preset.rs  preview.rs  snapshot.rs
crates/sim-cuda/: Cargo.toml  build.rs
crates/sim-cuda/native/: CMakeLists.txt
crates/sim-cuda/native/include/: sim_cuda.h
crates/sim-cuda/native/src/: sim_cuda.cu
crates/sim-cuda/src/: lib.rs
crates/sim-server/: Cargo.toml
crates/sim-server/src/: app.rs  main.rs  session.rs
crates/sim-server/static/: fallback.js  fallback.mjs  index.html  style.css  ui-app.mjs  viewer-loader.js  viewer-loader.mjs
crates/sim-server/tests/: api_gpu.rs
crates/sim-viewer/: Cargo.toml
crates/sim-viewer/src/: lib.rs
scripts/: build-viewer.sh  live_headless_smoke.py  run-server.sh
tests/: ui-headless.test.mjs
