[workspace]
members = [
    "crates/sim-core",
    "crates/sim-cuda",
    "crates/sim-server",
    "crates/sim-viewer",
]
default-members = [
    "crates/sim-core",
    "crates/sim-cuda",
    "crates/sim-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http2", "macros", "ws"] }
bincode = "1.3"
bytes = "1.10"
bytemuck = { version = "1.18", features = ["derive"] }
cmake = "0.1"
futures-util = "0.3"
parking_lot = "0.12"
rand = { version = "0.9", features = ["small_rng"] }
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
