[package]
name = "sim-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode.workspace = true
js-sys = "0.3"
sim-core = { path = "../sim-core" }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "BinaryType",
    "CanvasRenderingContext2d",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "WebSocket",
    "WheelEvent",
    "Window",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
